Add Page Header

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,8 +1,10 @@
 <html>
     <head>
-        <title>Chat With Private Data Using Gemini from Google</title>
+        <title>Chat with Private Data Using Gemini from Google</title>
     </head>
     <body>
+        <h2>Chat with Private Data Using Gemini from Google</h2>
+        <h4>Developed by XXXXX Liang</h4>
         <form action="/upload" method="POST" enctype="multipart/form-data">
             <input type="file" id='documents' name="documents" multiple />
             <input type="submit" value="Upload">
