Add Style to Align Page Text to Center

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,13 +1,18 @@
 <html>
     <head>
         <title>Chat with Private Data Using Gemini from Google</title>
+        <style>
+            .center { text-align: center; }
+        </style>
     </head>
     <body>
-        <h2>Chat with Private Data Using Gemini from Google</h2>
-        <h4>Developed by XXXXX Liang</h4>
-        <form action="/upload" method="POST" enctype="multipart/form-data">
-            <input type="file" id='documents' name="documents" multiple />
-            <input type="submit" value="Upload">
-        </form>
+        <main class="center">
+            <h2>Chat with Private Data Using Gemini from Google</h2>
+            <h4>Developed by XXXXX Liang</h4>
+            <form action="/upload" method="POST" enctype="multipart/form-data">
+                <input type="file" id='documents' name="documents" multiple />
+                <input type="submit" value="Upload">
+            </form>
+        </main>
     </body>
 </html>
