--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -13,6 +13,10 @@
                 <input type="file" id='documents' name="documents" multiple />
                 <input type="submit" value="Upload">
             </form>
+            <div>
+                <input id="chat-input" type="text" placeholder="Type your question here">
+                <button id="chat-button">Chat</button>
+            </div>
         </main>
     </body>
 </html>
