--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,6 +3,9 @@
         <title>Chat with Private Data Using Gemini from Google</title>
         <style>
             .center { text-align: center; }
+            .inputbox { width: calc(100% - 80px); }
+            .inputdiv { padding: 10px; }
+            .btn-primary { background-color: rgb(0, 159, 255); color: white; margin-left: 10px; }
         </style>
     </head>
     <body>
@@ -13,9 +16,9 @@
                 <input type="file" id='documents' name="documents" multiple />
                 <input type="submit" value="Upload">
             </form>
-            <div>
-                <input id="chat-input" type="text" placeholder="Type your question here">
-                <button id="chat-button">Chat</button>
+            <div class="inputdiv">
+                <input id="chat-input" type="text" class="inputbox" placeholder="Type your question here">
+                <button id="chat-button" class="btn btn-primary">Chat</button>
             </div>
         </main>
     </body>
